Fix alignment issue when button text on 2 lines

--- a/app/assets/stylesheets/components/page_specific/_category_detail.scss
+++ b/app/assets/stylesheets/components/page_specific/_category_detail.scss
@@ -34,6 +34,7 @@
   button {
     margin-left:-$category-inset;
     padding-left:$category-inset;
+    text-align:left;
 
     &:focus,
     &:hover {
